added select sharing

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 <meta property="og:image" content="img/obamafarewell.png"/>
 <meta property="og:site_name" content="Farewell Obama"/>
 <meta property="og:description" content="America is not the project of any one person. Because the single most powerful word in our democracy is the word ‘We.’ ‘We The People.’ ‘We Shall Overcome.’ ‘Yes, We Can."/>
+<meta property="fb:app_id" content="1841113742777540" />
 
 
 <meta name="twitter:card" content="Farewell Obama">
@@ -13,9 +14,12 @@
 <meta name="twitter:title" content="Farewell Obama">
 <meta name="twitter:description" content="America is not the project of any one person. Because the single most powerful word in our democracy is the word ‘We.’ ‘We The People.’ ‘We Shall Overcome.’ ‘Yes, We Can.">
 <meta name="twitter:image" content="img/obamafarewell.png">
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
 <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
+
 <link rel="stylesheet" type="text/css" href="style/style.css" />
+<link rel="stylesheet" href="style/selection-sharer.css" />
 
 </head>
 
@@ -111,7 +115,10 @@
 <footer class="row">
 <p>Paid for by a citizen.</p>
 </footer>
-
+<script src="js/selection-sharer.js"></script>
+<script>
+jQuery('p').selectionSharer();
+</script>
 </body>
 <link href="https://fonts.googleapis.com/css?family=Merriweather" rel="stylesheet">
 </html>
