added select sharing

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
   <hgroup class="row">
     <div class="col-sm-12">
       <h1>The Farewell Address</h1>
-      <h2>President Barrak Obama</h2>
+      <h2>President Barack Obama</h2>
     </div>
   </hgroup>
   <hr/>
