--- a/index.html
+++ b/index.html
@@ -2,18 +2,19 @@
 <html>
 <head>
 <title>Farewell Obama</title>
+<meta property="og:type"   content="website" />
 <meta property="og:title" content="Farewell Obama"/>
-<meta property="og:image" content="img/obamafarewell.png"/>
+<meta property="og:image" content="http://obamafarewell.org/img/obamafarewell.png"/>
 <meta property="og:site_name" content="Farewell Obama"/>
 <meta property="og:description" content="America is not the project of any one person. Because the single most powerful word in our democracy is the word ‘We.’ ‘We The People.’ ‘We Shall Overcome.’ ‘Yes, We Can."/>
 <meta property="fb:app_id" content="1835153953429105" />
 
 
 <meta name="twitter:card" content="Farewell Obama">
-<meta name="twitter:url" content="http://farewellobama">
+<meta name="twitter:url" content="http://farewellobama.org">
 <meta name="twitter:title" content="Farewell Obama">
 <meta name="twitter:description" content="America is not the project of any one person. Because the single most powerful word in our democracy is the word ‘We.’ ‘We The People.’ ‘We Shall Overcome.’ ‘Yes, We Can.">
-<meta name="twitter:image" content="img/obamafarewell.png">
+<meta name="twitter:image" content="http://obamafarewell.org/img/obamafarewell.png">
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
 <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
@@ -127,7 +128,7 @@ jQuery('p').selectionSharer();
   })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
 
   ga('create', 'UA-90164812-1', 'auto');
-  ga('send', 'pageview'); 
+  ga('send', 'pageview');
 
 </script>
 <link href="https://fonts.googleapis.com/css?family=Merriweather" rel="stylesheet">
