--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
 <title>Farewell Obama</title>
 <meta property="og:type"   content="website" />
 <meta property="og:title" content="Farewell Obama"/>
+<meta property="og:url" content="http://farewellobama.org"/>
+
 <meta property="og:image" content="http://obamafarewell.org/img/obamafarewell.png"/>
 <meta property="og:site_name" content="Farewell Obama"/>
 <meta property="og:description" content="America is not the project of any one person. Because the single most powerful word in our democracy is the word ‘We.’ ‘We The People.’ ‘We Shall Overcome.’ ‘Yes, We Can."/>
