adjusted facebookm meta info.

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <title>Farewell Obama</title>
 <meta property="og:type"   content="website" />
 <meta property="og:title" content="Farewell Obama"/>
-<meta property="og:url" content="http://farewellobama.org"/>
+<meta property="og:url" content="http://obamafarewell.org/"/>
 
 <meta property="og:image" content="http://obamafarewell.org/img/obamafarewell.png"/>
 <meta property="og:site_name" content="Farewell Obama"/>
@@ -13,7 +13,7 @@
 
 
 <meta name="twitter:card" content="Farewell Obama">
-<meta name="twitter:url" content="http://farewellobama.org">
+<meta name="twitter:url" content="http://obamafarewell.org/">
 <meta name="twitter:title" content="Farewell Obama">
 <meta name="twitter:description" content="America is not the project of any one person. Because the single most powerful word in our democracy is the word ‘We.’ ‘We The People.’ ‘We Shall Overcome.’ ‘Yes, We Can.">
 <meta name="twitter:image" content="http://obamafarewell.org/img/obamafarewell.png">
