updated twitter meta info

--- a/index.html
+++ b/index.html
@@ -12,7 +12,8 @@
 <meta property="fb:app_id" content="1835153953429105" />
 
 
-<meta name="twitter:card" content="Farewell Obama">
+<meta name="twitter:card" content="summary_large_image">
+<meta name="twitter:creator" content="@thejameswilliam">
 <meta name="twitter:url" content="http://obamafarewell.org/">
 <meta name="twitter:title" content="Farewell Obama">
 <meta name="twitter:description" content="America is not the project of any one person. Because the single most powerful word in our democracy is the word ‘We.’ ‘We The People.’ ‘We Shall Overcome.’ ‘Yes, We Can.">
