added share buttons and corrected some styles.

--- a/index.html
+++ b/index.html
@@ -21,13 +21,18 @@
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
 <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
-
+<script src="https://use.fontawesome.com/812f7dc41d.js"></script>
 <link rel="stylesheet" type="text/css" href="style/style.css" />
 <link rel="stylesheet" href="style/selection-sharer.css" />
 
 </head>
 
 <body>
+  <ul class="share-buttons">
+    <li><a href="https://www.facebook.com/sharer/sharer.php?u=http%3A%2F%2Fobamafarewell.org%2F&t=" target="_blank" title="Share on Facebook" onclick="window.open('https://www.facebook.com/sharer/sharer.php?u=' + encodeURIComponent(document.URL) + '&t=' + encodeURIComponent(document.URL)); return false;"><i class="fa fa-facebook-square fa-2x" aria-hidden="true"></i><span class="sr-only">Share on Facebook</span></a></li>
+    <li><a href="https://twitter.com/intent/tweet?source=http%3A%2F%2Fobamafarewell.org%2F&text=:%20http%3A%2F%2Fobamafarewell.org%2F&via=thejameswilliam" target="_blank" title="Tweet" onclick="window.open('https://twitter.com/intent/tweet?text=' + encodeURIComponent(document.title) + ':%20' + encodeURIComponent(document.URL)); return false;"><i class="fa fa-twitter-square fa-2x" aria-hidden="true"></i><span class="sr-only">Tweet</span></a></li>
+    <li><a href="mailto:?subject=&body=:%20http%3A%2F%2Fobamafarewell.org%2F" target="_blank" title="Send email" onclick="window.open('mailto:?subject=' + encodeURIComponent(document.title) + '&body=' +  encodeURIComponent(document.URL)); return false;"><i class="fa fa-envelope-square fa-2x" aria-hidden="true"></i><span class="sr-only">Send email</span></a></li>
+  </ul>
 <div class="col-sm-8 col-sm-offset-2">
   <hgroup class="row">
     <div class="col-sm-12">
@@ -42,8 +47,8 @@
         <iframe width="934" height="505" src="https://www.youtube.com/embed/RBP8uKqI2ns" frameborder="0" allowfullscreen></iframe>
       </div>
     </div>
-
-    <div class="content">
+    <hr/>
+    <article class="content" role="content">
       <p>It&rsquo;s good to be home.&nbsp; My fellow Americans, Michelle and I have been so touched by all the well-wishes we&rsquo;ve received over the past few weeks.&nbsp; But tonight it&rsquo;s my turn to say thanks.&nbsp; Whether we&rsquo;ve seen eye-to-eye or rarely agreed at all, my conversations with you, the American people &ndash; in living rooms and schools; at farms and on factory floors; at diners and on distant outposts &ndash; are what have kept me honest, kept me inspired, and kept me going.&nbsp; Every day, I learned from you.&nbsp; You made me a better president, and you made me a better man.</p>
       <p>I first came to Chicago when I was in my early 20s, still trying to figure out who I was; still searching for a purpose to my life.&nbsp; It was in neighborhoods not far from here where I began working with church groups in the shadows of closed steel mills.&nbsp; It was on these streets where I witnessed the power of faith, and the quiet dignity of working people in the face of struggle and loss.&nbsp; This is where I learned that change only happens when ordinary people get involved, get engaged, and come together to demand it.&nbsp;</p>
       <p>After eight years as your president, I still believe that.&nbsp; And it&rsquo;s not just my belief.&nbsp; It&rsquo;s the beating heart of our American idea &ndash; our bold experiment in self-government.&nbsp;</p>
@@ -63,7 +68,6 @@
       <p>There have been moments throughout our history that threatened to rupture that solidarity.&nbsp; The beginning of this century has been one of those times.&nbsp; A shrinking world, growing inequality; demographic change and the specter of terrorism &ndash; these forces haven&rsquo;t just tested our security and prosperity, but our democracy as well.&nbsp; And how we meet these challenges to our democracy will determine our ability to educate our kids, and create good jobs, and protect our homeland.&nbsp;</p>
       <p>In other words, it will determine our future.</p>
       <p>Our democracy won&rsquo;t work without a sense that everyone has economic opportunity.&nbsp; Today, the economy is growing again; wages, incomes, home values, and retirement accounts are rising again; poverty is falling again.&nbsp; The wealthy are paying a fairer share of taxes even as the stock market shatters records.&nbsp; The unemployment rate is near a ten-year low.&nbsp; The uninsured rate has never, ever been lower.&nbsp; Health care costs are rising at the slowest rate in fifty years.&nbsp; And if anyone can put together a plan that is demonstrably better than the improvements we&rsquo;ve made to our health care system &ndash; that covers as many people at less cost &ndash; I will publicly support it.&nbsp;</p>
-
       <p>That, after all, is why we serve &ndash; to make people&rsquo;s lives better, not worse.&nbsp;</p>
       <p>But for all the real progress we&rsquo;ve made, we know it&rsquo;s not enough.&nbsp; Our economy doesn&rsquo;t work as well or grow as fast when a few prosper at the expense of a growing middle class.&nbsp; But stark inequality is also corrosive to our democratic principles.&nbsp; While the top one percent has amassed a bigger share of wealth and income, too many families, in inner cities and rural counties, have been left behind &ndash; the laid-off factory worker; the waitress and health care worker who struggle to pay the bills &ndash; convinced that the game is fixed against them, that their government only serves the interests of the powerful &ndash; a recipe for more cynicism and polarization in our politics.&nbsp;</p>
       <p>There are no quick fixes to this long-term trend.&nbsp; I agree that our trade should be fair and not just free.&nbsp; But the next wave of economic dislocation won&rsquo;t come from overseas.&nbsp; It will come from the relentless pace of automation that makes many good, middle-class jobs obsolete.</p>
@@ -111,12 +115,12 @@
       <p>Yes We Can.</p>
       <p>Thank you.&nbsp; God bless you.&nbsp; And may God continue to bless the United States of America.</p>
 
-    </div>
+    </article>
   </div>
 
 
 </div>
-<footer class="row">
+<footer class="footer">
 <p>Paid for by a citizen.</p>
 </footer>
 <script src="js/selection-sharer.js"></script>
